Image Search website

--- a/index.html
+++ b/index.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image search application </title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
-
-<h1>Image Search Website</h1>
-<form action="">
-  <input type="text" id="Search-input" placeholder="Search for images">
-  <button id="Search-button">Search</button>
-</form>
 
 
-<div class="search-results">
-               <div class="search-result">
-                <img src="https://images.unsplash.com/photo-1710445350875-00fec354614f?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Mountains Under The Sky">
-
-                <a href="https://images.unsplash.com/photo-1710406941299-d61bdb76b109?q=80&w=2830&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" target="_blank">Mountains Under The Sky</a>
-               </div>
-
-
-               <div class="search-result">
-                <img src="https://images.unsplash.com/photo-1710481293133-05ada0ae12ec?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Mountains Under The Sky">
-                <a href="https://images.unsplash.com/photo-1710438641275-1b1512304344?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" target="_blank">Mountains Under The Sky</a>
-               </div>
+  <h1>Image Search Website</h1>
+  <form action="">
+    <input type="text" id="Search-input" placeholder="Search for images">
+    <button id="Search-button">Search</button>
+  </form>
 
 
-               <div class="search-result">
-                <img src="https://images.unsplash.com/photo-1709136494561-d98ea74c9431?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Mountains Under The Sky">
+  <div class="search-results">
+    <div class="search-result">
+      <img src="img1.jpg" alt="Architecture and Exterior">
 
-                <a href="https://unsplash.com/photos/a-mountain-covered-in-clouds-and-trees-on-top-of-a-hill-1sSdU709ZL0" target="_blank">Mountains Under The Sky</a>
-               </div>
-              
-</div>
+      <a href="https://unsplash.com/photos/low-angle-photo-of-city-high-rise-buildings-during-daytime-PhYq704ffdA?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash"
+        target="_blank">Architecure and Exterior</a>
+    </div>
 
 
-<button id="show-more-button">Show More</button>
+    <div class="search-result">
+      <img
+        src="https://images.unsplash.com/photo-1710481293133-05ada0ae12ec?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="Mountains Under The Sky">
+      <a href="https://unsplash.com/photos/low-angle-photo-of-city-high-rise-buildings-during-daytime-PhYq704ffdA?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash"
+        target="_blank">Mountains Under The Sky</a>
+    </div>
+
+
+    <div class="search-result">
+      <img
+        src="img2.jpg"
+        alt="Mountains Under The Sky">
+
+      <a href="https://unsplash.com/photos/a-mountain-covered-in-clouds-and-trees-on-top-of-a-hill-1sSdU709ZL0"
+        target="_blank">Pandas and Wildlife</a>
+    </div>
+
+  </div>
+
+
+  <button id="show-more-button">Show More</button>
 
 
 
   <script src="script.js"></script>
 </body>
+
 </html>
